--- a/styles/main.css
+++ b/styles/main.css
@@ -29,3 +29,17 @@ html,
 body {
   font-family: 'League Spartan', sans-serif;
 }
+
+body {
+  background-image: url('../images/bg-pattern-top-mobile.svg'), url('../images/bg-pattern-bottom-mobile.svg');
+  background-position: top, bottom;
+  background-repeat: no-repeat;    
+}
+
+@media (min-width: 1024px) {
+  body {
+    background-image: url('../images/bg-pattern-top-desktop.svg'), url('../images/bg-pattern-bottom-desktop.svg');
+    background-position: top, bottom;
+    background-repeat: no-repeat;  
+  } 
+}
